# demian-llm-journal-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/v1/: diary.py  entries.py  users.py
app/core/: auth.py
app/db/: Session.py  database.py  init_db.py
app/models/: diary.py
app/schemas/: diary.py
app/services/: diary.py
backend/: .env.example  Dockerfile
backend/app/: get_token.py
backend/app/api/v1/: diary.py
backend/app/core/: auth.py
backend/app/db/: UNUSE_database.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  diary.py  users.py
backend/app/services/: llm.py
backend/docs/: 커밋규칙.txt  폴더구조.txt
docs/: 신입_엔지니어_체크리스트.txt
frontend/: middleware.ts
frontend/app/: LogoutButton.tsx  layout.tsx  page.tsx
frontend/app/diary/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/write/: page.tsx
